--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.2",
+    "faunadb": "^4.5.2",
     "next": "^12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
