--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^0.1.8",
     "babel-plugin-styled-components": "^2.0.2",
     "faunadb": "^4.5.2",
     "next": "^12.0.8",
